--- a/css/style.css
+++ b/css/style.css
@@ -121,15 +121,12 @@ a {
     transition: .3s ease-in-out;
 }
 
-
 .header__img-big {
     margin-top: 40px;
     width: 100%;
-    height: 993px;
     display: flex;
     justify-content: center;
 }
-
 
 /*------------------features------------------*/
 
@@ -247,6 +244,8 @@ a {
 .content__card button:hover {
     transition: .3s ease-in-out;
     transform: translateY(-2px);
+    background-color: #4578FB;
+    border: 1px solid #4578FB;
 }
 
 .content__card img:nth-child(1) {
@@ -396,3 +395,53 @@ a {
 
 /*------------------example------------------*/
 
+.example {
+    margin-bottom: 100px;
+}
+.example__content {
+    display: flex;
+    background-color: #343434;
+    border-radius: 33px;
+    overflow: hidden;
+}
+.left__content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 50px;
+}
+.left__content-title h1 {
+    font-weight: 400;
+    font-size: 42px;
+    margin: 0 0 50px 0;
+    width: 80%;
+}
+.left__content-button button {
+    border: 1px solid #4452FE;
+    color: #fff;
+    padding: 13px 67px;
+    font-size: 17px;
+    cursor: pointer;
+    background-color: #4452FE;
+
+    transition: .3s ease-in-out;
+}
+.left__content-button button:hover {
+    transition: .3s ease-in-out;
+    transform: translateY(-2px);
+    background-color: #4578FB;
+    border: 1px solid #4578FB;
+}
+
+.rigth__content {
+}
+
+.rigth__content img {
+    width: 453px;
+    height: 100%;
+}
+/*------------------map------------------*/
+.map {
+    height: 100%;
+    width: 100%;        
+}
