--- a/css/media.css
+++ b/css/media.css
@@ -1,5 +1,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap');
 
+@media only screen and (max-width: 1500px) {
+    body {
+        overflow-x: hidden;
+        margin: 0 auto;
+    }
+}
+@media only screen and (max-width: 992px) {
+    
+}
+@media only screen and (max-width: 992px) {
+    
+}
+@media only screen and (max-width: 992px) {
+    
+}
+
+
+
+
+
 @media only screen and (max-width: 992px) {
     
 }
