--- a/css/media.css
+++ b/css/media.css
@@ -6,20 +6,9 @@
         margin: 0 auto;
     }
 }
-@media only screen and (max-width: 992px) {
-    
-}
-@media only screen and (max-width: 992px) {
-    
-}
-@media only screen and (max-width: 992px) {
-    
-}
-
-
-
-
 
 @media only screen and (max-width: 992px) {
-    
+    .hader__menu {
+        display: none;
+    }
 }
