--- a/css/media.css
+++ b/css/media.css
@@ -7,8 +7,7 @@
     }
 }
 
-@media only screen and (max-width: 992px) {
-    .hader__menu {
-        display: none;
+@media only screen and (max-width: 1300px) {
+    .container {
     }
 }
