--- a/css/media.css
+++ b/css/media.css
@@ -11,3 +11,39 @@
     .container {
     }
 }
+@media only screen and (max-width: 992px) {
+    .lock {
+        overflow: hidden;
+    }
+    .nav__menu {
+        transform: translateY(-500px);
+        position: absolute;
+        top: 50%;
+        left: 50%;
+    }
+    .nav__button {
+        transform: translateY(-500px);
+        position: absolute;
+        top: 50%;
+        left: 50%;
+    }
+    .header__nav {
+        display: flex;
+        justify-content: space-between;
+    }
+    .header__nav.open {
+        position: absolute;
+        bottom: 100%;
+        left: 0;
+        height: 100vh;
+        width: 100%;
+        background-color: #b91d1d;
+        display: flex;
+        transition: all 0.3s ease;
+        overflow: scroll;
+    }
+    .header__menu.open {
+        transform: translateY(0px);
+
+    }
+}
